# macchine

./: .gitignore  header_analysis.py  pyproject.toml
fielddata_downloader/: README.md  download.py  list_project.py  sections_example.json
macchine/: __init__.py  cli.py  config.py
macchine/analysis/: __init__.py  cycle_analysis.py  degradation.py  event_detection.py  operator_comparison.py  perpile_features.py  pile_quality.py  plot_utils.py  predictive.py  sensor_degradation.py  utilization.py
macchine/harmonize/: __init__.py  calibration.py  calibration_status.yaml  dat_corrections.yaml  sensor_definitions.yaml  sensor_map.py  technique_map.py
macchine/models/: __init__.py  core.py  fleet.py
macchine/parsers/: __init__.py  beginng_parser.py  dat_parser.py  filename_parser.py  json_parser.py
macchine/quality/: __init__.py  checks.py  plots.py  site_report.py
scripts/: audit_data_quality.py  build_merged_index.py  compute_dat_corrections.py  cross_validate_corrections.py  diagnose_sensor_distributions.py  generate_completeness_report.py  generate_cycle_report.py  generate_degradation_report.py  generate_depth_report.py  generate_dynamics_plots.py  generate_event_report.py  generate_merge_case_study.py  generate_operator_report.py  generate_perpile_analysis.py  generate_pile_plots.py  generate_plots.py  generate_sensor_health_plots.py  generate_site_reports.py  generate_technique_atlas.py  generate_zero_analysis.py  hybrid_spec_parse.py  investigate_corr_wins.py  investigate_spec_parsing.py  migrate_parquet_columns.py  parse_medef_specs.py  pedantic_spec_parse.py  scan_all_specs.py  sign_anchor_reparse.py
specs_data/: MEDEF-Format.html  medef_specs.yaml
tests/: conftest.py  test_dat_parser.py  test_filename_parser.py  test_json_parser.py
(+6 files in other folders)
